Fix message wrapping issue

--- a/src/app/modules/chat/components/chat-room/chat-room-messages/chat-room-message/chat-room-message.component.ng.scss
+++ b/src/app/modules/chat/components/chat-room/chat-room-messages/chat-room-message/chat-room-message.component.ng.scss
@@ -111,6 +111,7 @@
   .m-chatMessage__contentRow {
     display: flex;
     flex-flow: row nowrap;
+    width: 100%;
 
     .m-chatRoomMessage__bubble {
       display: flex;
